--- a/index.html
+++ b/index.html
@@ -4,11 +4,20 @@
 <!--[if IE 8]>         <html class="no-js lt-ie9" lang=""> <![endif]-->
 <!--[if gt IE 8]><!--> <html class="non-js" lang=""> <!--<![endif]-->
     <head>
+        
+<! - Etiqueta de sitio global (gtag.js) - Google Analytics ->
+<script async src = "https://www.googletagmanager.com/gtag/js?id=UA-146226213-1"> </script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  función gtag () {dataLayer.push (argumentos);}
+  gtag ('js', nueva fecha ());
 
+  gtag ('config', 'UA-146226213-1');
+</script>
 
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>Tu Nombre aquí</title>
+        <title>San Salvador Mauricio</title>
 
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
