--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
 <!--[if gt IE 8]><!--> <html class="non-js" lang=""> <!--<![endif]-->
     <head>
         
-<! - Etiqueta de sitio global (gtag.js) - Google Analytics ->
-<script async src = "https://www.googletagmanager.com/gtag/js?id=UA-146226213-1"> </script>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-146226213-1"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
-  función gtag () {dataLayer.push (argumentos);}
-  gtag ('js', nueva fecha ());
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
-  gtag ('config', 'UA-146226213-1');
+  gtag('config', 'UA-146226213-1');
 </script>
 
         <meta charset="utf-8">
